Details
-
Bug
-
Resolution: Fixed
-
Blocker
-
f7932ba2de71f0340daa18db32e083383b8e680b
Description
This test was added on Wine's side and has been broken in ROS since it was added with the 2.16 sync in f7932ba2de.
https://reactos.org/testman/detail.php?id=35056467&prev=0
Hello World(ntoskrnl/mm/mmfault.c:122) Page fault at high IRQL was 31, address 11111111
|
[7h
|
Entered debugger on last-chance exception (Exception Code: 0xc0000006) (Unknown/User defined exception)
|
kdb:>
|
bt
|
Eip:
|
<NTOSKRNL.EXE:13db1f (ntoskrnl/kdbg/kdb_cli.c:3696 (KdpPrompt))>
|
Frames:
|
<NTOSKRNL.EXE:141239 (ntoskrnl/kd/kdmain.c:173 (KdpEnterDebuggerException))>
|
<NTOSKRNL.EXE:128afa (ntoskrnl/ke/i386/exp.c:956 (KiDispatchException))>
|
<NTOSKRNL.EXE:128ef3 (ntoskrnl/ke/i386/exp.c:1126 (KiDispatchExceptionFromTrapFrame))>
|
<NTOSKRNL.EXE:12bf61 (ntoskrnl/ke/i386/traphdlr.c:231 (KiDebugHandler))>
|
<NTOSKRNL.EXE:12e1e5 (ntoskrnl/ke/i386/traphdlr.c:1669 (KiDebugServiceHandler))>
|
<NTOSKRNL.EXE:3ba1 (:0 (KiDebugService))>
|
<0093001c>
|
<ntdll_winetest.exe:14817>
|
<ntdll_winetest.exe:76c35>
|
<ntdll_winetest.exe:7713a>
|
<ntdll_winetest.exe:7719c>
|
<kernel32.dll:108d2>
|
<00000000>
|
kdb:>
|
|
|
[SYSREG] Stage took: 777.778522 seconds
|
The new tests calls int 2Dh with invalid arguments. The kdbg version of KdpPrompt does not handle this correctly (unlike the kd64 version). It does not use probing or SEH at all.
Attachments
Issue Links
- blocks
-
CORE-13762 Syncing ReactOS with Wine Staging 2.16
-
- Resolved
-
- is blocked by
-
CORE-14095 ReactOS 197ec4c Will Not Boot in VMware Player 12
-
- Resolved
-