[NTOS:KD] Protect against invalid user arguments in KdpPrompt. CORE-14057